# launch_exit_status

./: CMakeLists.txt  README-ja.md  README.md  package.xml  question.md  with_autoware_console_log.txt
launch/: multi_required_long_sleep.launch.py  multi_required_with_aw.launch.py  multi_required_with_seleep.launch.py  multi_shutdown.launch.py  multi_shutdown_with_autoware.launch.py  multi_shutdown_with_autoware.launch.xml  scope_sample.xml  single_required_with_aw.launch.py  single_required_with_aw_not_working.launch.py  sleep.launch.py
logs/: generate_engine_file.txt  manually_launch_logging_simulator_launch.txt  mulit_shutdown_planning_perception_off.txt  multi_required_with_aw_planning_off.txt  single_required_with_aw.txt  single_required_with_aw_planning_off.txt  single_shutdown_planning_perception_off.txt
scripts/: sleep_node.py
