<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_exit_status</name>
  <version>0.1.0</version>
  <description>Repository verifying the exit status of ros2 launch.</description>
  <maintainer email="hayato-m126@users.noreply.github.com">Hayato Mizushima</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_launch</exec_depend>
  <exec_depend>demo_nodes_py</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
